--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "12.3.4"
+    "next": "12.3.4",
+    "server": "json-server --watch db.json --port 3001"
   },
   "devDependencies": {
     "typescript": "^5",
