--- a/package.json
+++ b/package.json
@@ -14,14 +14,23 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
     "next": "12.3.4",
-    "react": "^18",
-    "react-dom": "^18"
+    "popper.js": "^1.16.1",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
+    "react-dom": "^18",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.10",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-bootstrap": "^0.32.35",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.12",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "typescript": "^5"
