--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "formik": "^2.4.5",
     "next": "12.3.4",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.10",
